mana-curve Add a mana curve and a filters

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -29,6 +29,10 @@
     "./storage": {
       "types": "./dist/storage/index.d.ts",
       "import": "./dist/storage/index.js"
+    },
+    "./filters": {
+      "types": "./dist/filters/index.d.ts",
+      "import": "./dist/filters/index.js"
     }
   },
   "scripts": {
