--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test:mcp": "pnpm --filter @mtg-deckbuilder/mcp-server test",
     "typecheck": "pnpm -r typecheck",
     "clean": "pnpm -r clean",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
     "postinstall": "pnpm build:shared"
   },
   "packageManager": "pnpm@9.0.0",
@@ -20,6 +22,7 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.8",
     "typescript": "^5.2.2"
   }
 }
