--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "pnpm -r clean",
     "changeset": "changeset",
     "version-packages": "changeset version",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
     "postinstall": "pnpm build:shared"
   },
   "packageManager": "pnpm@9.0.0",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.8",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitepress": "^1.6.4"
   }
 }
