package-everything Add github action to package file

--- a/packages/electron-app/package.json
+++ b/packages/electron-app/package.json
@@ -73,7 +73,14 @@
       }
     ],
     "mac": {
-      "category": "public.app-category.games"
+      "category": "public.app-category.games",
+      "target": ["dmg"]
+    },
+    "dmg": {
+      "contents": [
+        { "x": 130, "y": 220 },
+        { "x": 410, "y": 220, "type": "link", "path": "/Applications" }
+      ]
     }
   }
 }
